# easyFEM

./: CMakeLists.txt  README.md  main.cpp
Data/: fem_data.txt
ThirdPartyLicenses/: GUI_temp-licence.txt
include/: axis.h  geometry.h  grid.h  mesh_creation.h  meshing.h  to_fem.h
src/: axis.cpp  bowyer_watson.cpp  geometry.cpp  grid.cpp  main_window.cpp  main_window.h  mesh.cpp  mesh_creation.cpp  meshing.cpp  to_fem.cpp  triangular_mesh.cpp  triangular_mesh.h  write_to_fem.cpp
src/app_ui/: axis.cpp  axis.h  grid.cpp
src/gauss/: gauss.cpp
src/mes/: fem_funcs.cpp  fem_solve.cpp  gauss.cpp  load_function.cpp  load_function.h  matrix.cpp  matrix.h  mes.cpp  mes.h  structs.h  vector_function_example.cpp  write_to_vtu.cpp
src/mes/matrix/: matrix.cpp  matrix.h  mes.cpp  mes.h
src/mesh/: geometry.cpp  geometry.h  mesh.cpp  mesh.h  triangular_mesh.cpp  triangular_mesh.h
